--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,5 +15,13 @@ extra_css:
 nav:
     - About : index.md
     - HPC User Guide : 
-        - hpc-user-guide/what-is-the-cluster.md
-        - hpc-user-guide/navigate-to-cluster.md
+        - "What Is The Cluster?": hpc-user-guide/what-is-the-cluster.md
+        - "Navigate To The Cluster": hpc-user-guide/navigate-to-cluster.md
+    - Tutorials:
+        - Intro To R: 
+            - "Introduction To R OnDemand":tutorials/intro-to-r/r-ondemand.md
+            - "Project Management": tutorials/intro-to-r/project-management.md
+            - "Data Structures": tutorials/intro-to-r/data-structures.md
+            - "Data Frames": tutorials/intro-to-r/data-frames.md
+            - "Subsetting" tutorials/intro-to-r/subsetting.md
+            - "Visualization": tutorials/intro-to-r/visualization.md
