--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,5 +23,5 @@ nav:
             - "Project Management": tutorials/intro-to-r/project-management.md
             - "Data Structures": tutorials/intro-to-r/data-structures.md
             - "Data Frames": tutorials/intro-to-r/data-frames.md
-            - "Subsetting" tutorials/intro-to-r/subsetting.md
+            - "Subsetting": tutorials/intro-to-r/subsetting.md
             - "Visualization": tutorials/intro-to-r/visualization.md
