--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,11 @@ site_url: https://rt.bio.io
 theme:
     name: material
     logo: 'img/newlogo.png'
+    
+    features:
+        - navigation.tabs
+        - navigation.tabs.sticky
+        - navigation.sections
 
 extra_css:
     - stylesheets/extra.css
