--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,7 @@ nav:
             - "Project Management": tutorials/intro-to-r/project-management.md
             - "Data Structures": tutorials/intro-to-r/data-structures.md
             - "Functions & Flow": tutorials/intro-to-r/functions-flow.md
-            - "Subsetting": tutorials/intro-to-r/subsetting.md
+            - "Inspecting/Manipulating Data": tutorials/intro-to-r/inspecting-manipulating-data.md
             - "Visualization": tutorials/intro-to-r/visualization.md
         - Intro To Python:
             - "Introduction To Python OnDemand": tutorials/intro-to-python/python-ondemand.md
