--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,10 +39,14 @@ nav:
             - "Request an Account": https://access.tufts.edu/research-cluster-account
             - "Navigate To The Cluster": hpc-user-guide/navigate-to-cluster.md
             - "File Transfer": hpc-user-guide/file-transfer.md
-        - Introduction To SLURM:
+        - Cluster Resources:
             - "HPC Storage": hpc-user-guide/hpc-storage.md
             - "Compute Resources": hpc-user-guide/compute-resources.md
             - "Software On The Cluster": hpc-user-guide/software-cluster.md
+        - Introduction To SLURM:
+            - "Interactive Session": hpc-user-guide/interactive-session.md
+            - "Submitting A Batch Job": hpc-user-guide/batch-job.md
+            - "Checking Job Status": hpc-user-guide/job-status.md
     - Software Tutorials:
         - Intro To Unix:
             - "Introduction To Unix" : tutorials/intro-to-unix/unix.md
