--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,4 +72,5 @@ nav:
             - "Quality Control": omics/intro-to-16S/quality-control.md
             - "Error Model & ASVs": omics/intro-to-16S/error-asv.md
             - "Merging, Chimeras & Taxonomy": omics/intro-to-16S/merging-chimeras-taxonomy.md
+            - "Diversity Analysis": omics/intro-to-16S/diversity-analysis.md
         
