--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,10 +74,16 @@ nav:
             - "Merging, Chimeras & Taxonomy": omics/intro-to-16S/merging-chimeras-taxonomy.md
             - "Diversity Analysis": omics/intro-to-16S/diversity-analysis.md
             - "Differential Abundance": omics/intro-to-16S/differential-abundance.md
-    - Machine Learning:
+    - Machine Learning: machine-learning/intro-machine.md
         - Unsupervised Learning:
             - "Dimension Reduction": machine-learning/unsupervised/dimension-reduction.md
             - "Clustering": machine-learning/unsupervised/clustering.md
-            
+        - Supervised Learning:
+            - Regression:
+            - Regularization:
+            - Decision Trees/Ensemble Methods:
+            - Neural Networks:
+            - Deep Learning:
+            - Bayesian:
     
         
