--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,8 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences
+  - attr_list
+  - md_in_html
   
 extra_css:
     - stylesheets/extra.css
