--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,9 @@ markdown_extensions:
   - pymdownx.superfences
   - attr_list
   - md_in_html
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
   
 extra_css:
     - stylesheets/extra.css
