--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,14 @@ nav:
             - "Loops & Conditionals": tutorials/intro-to-python/loops-conditionals.md
             - "Functions & Scope": tutorials/intro-to-python/functions-scope.md
     - Omics Tutorials:
+    - Intro To NGS: 
+            - "Background": omics/intro-to-ngs/background.md
+            - "Setup": omics/intro-to-ngs/01_Setup.md
+            - "Quality Control": omics/intro-to-ngs/02_Quality_Control.md
+            - "Alignment": omics/intro-to-ngs/03_Alignment.md
+            - "Alignment Cleanup": omics/intro-to-ngs/04_Alignment_Cleanup.md
+            - "Variant Calling": omics/intro-to-ngs/05_Variant_Calling.md
+            - "Variant Annotation": omics/intro-to-ngs/06_Variant_Annotation.md
         - Intro To 16S Metabarcoding: 
             - "Background": omics/intro-to-16S/background.md
             - "Setup": omics/intro-to-16S/setup.md
