--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,7 @@ nav:
             - "Gene Quantification": omics/intro-to-rnaseq/04_Gene_Quantification.md
             - "Differential Expression": omics/intro-to-rnaseq/05_Differential_Expression.md
             - "Pathway Enrichment": omics/intro-to-rnaseq/06_Pathway_Enrichment.md
+    - Metagenomics:
         - Intro To 16S Metabarcoding: 
             - "Background": omics/intro-to-16S/background.md
             - "Setup": omics/intro-to-16S/setup.md
