--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,7 +69,7 @@ nav:
             - "Lists": basic/intro-to-python/lists.md
             - "Loops & Conditionals": basic/intro-to-python/loops-conditionals.md
             - "Functions & Scope": basic/intro-to-python/functions-scope.md
-    - Omics Tutorials:
+    - NGS Tutorials:
         - Intro To NGS: 
             - "Background": omics/intro-to-ngs/background.md
             - "Setup": omics/intro-to-ngs/01_Setup.md
@@ -86,7 +86,7 @@ nav:
             - "Gene Quantification": omics/intro-to-rnaseq/04_Gene_Quantification.md
             - "Differential Expression": omics/intro-to-rnaseq/05_Differential_Expression.md
             - "Pathway Enrichment": omics/intro-to-rnaseq/06_Pathway_Enrichment.md
-    - Metagenomics:
+    - Metagenomics Tutorials:
         - Intro To 16S Metabarcoding: 
             - "Background": omics/intro-to-16S/background.md
             - "Setup": omics/intro-to-16S/setup.md
