--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,7 +115,7 @@ nav:
             - "Dimension Reduction": machine-learning/unsupervised/dimension-reduction.md
             - "Clustering": machine-learning/unsupervised/clustering.md
         - Supervised Learning:
-            - Regression: machine-learning/supervised/linear-model.md
+            - Linear Models: machine-learning/supervised/linear-model.md
             - Regularization: machine-learning/unsupervised/clustering.md
             - Decision Trees/Ensemble Methods: machine-learning/unsupervised/clustering.md
             - Neural Networks: machine-learning/unsupervised/clustering.md
