--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,6 +117,7 @@ nav:
         - Supervised Learning:
             - Linear Models: machine-learning/supervised/linear-model.md
             - Logistic Regression: machine-learning/supervised/logistic-regression.md
+            - Multivariate Regression: machine-learning/supervised/multivariate-regression.md
             - Regularization: machine-learning/unsupervised/clustering.md
             - Decision Trees/Ensemble Methods: machine-learning/unsupervised/clustering.md
             - Neural Networks: machine-learning/unsupervised/clustering.md
