--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Tufts Research Technology Bioinformatics
-repo_url: https://github.com/BioNomad/tuftsTutorials
+site_name: Tufts Research Technology Bioinformatics Workshops
+repo_url: https://github.com/BioNomad/tuftsWorkshops
 
 theme:
   name: material
