--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,7 @@ nav:
             - "Data Structures": basic/intro-to-r/data-structures.md
             - "Inspecting/Manipulating Data": basic/intro-to-r/inspecting-manipulating-data.md
             - "Visualization": basic/intro-to-r/visualization.md
+            - "R Markdown": basic/intro-to-r/r-markdown.md
     - Intro To 16S Metabarcoding:
         - "Background": omics/intro-to-16S/background.md
         - "Setup": omics/intro-to-16S/setup.md
