--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Tufts Research Technology Bioinformatics Workshops
+site_name: Tufts TTS Research Technology Bioinformatics Workshops
 repo_url: https://github.com/tuftsdatalab/tuftsWorkshops
 
 theme:
