--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,8 @@ extra_javascript:
 nav:
     - About : index.md
     - Intro to HPC/Slurm For Life Sciences: 
-        - Tufts HPC Cluster Access: hpc-user-guide/hpc-intro.md
+        - "Introduction": hpc-user-guide/hpc-intro.md
+        - Tufts HPC Cluster Access: 
             - "Request an Account": hpc-user-guide/request-account.md
             - "Login": hpc-user-guide/login.md
             - "File Transfer": hpc-user-guide/file-transfer.md
