--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ nav:
             - "BLAST Batch Script": basic/intro-to-unix/blast-batch.md
     - Intro to RStudio For Life Sciences:
         - Intro to RStudio For Life Sciences: basic/intro-to-r/r-ondemand.md
+        - "Intro To R Script": basic/intro-to-r/r-workshop-markdown.md
     - Intro To 16S Metabarcoding:
         - "Background": omics/intro-to-16S/background.md
         - "Setup": omics/intro-to-16S/setup.md
