--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ nav:
     - Intro to HPC/Slurm For Life Sciences: 
         - "Introduction": hpc-user-guide/hpc-intro.md
         - Tufts HPC Cluster Access: 
-            - "Request an Account": hpc-user-guide/request-account.md
+            - "Cluster Account and Storage": hpc-user-guide/request-account.md
             - "Login": hpc-user-guide/login.md
             - "File Transfer": hpc-user-guide/file-transfer.md
         - Tufts HPC Cluster Resource:
