--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
         - "Setup": basic/intro-to-r/r-ondemand.md
         - "Intro To R Script": basic/intro-to-r/r-workshop-markdown.md
     - Intro To 16S Metabarcoding:
+        - "Introduction": omics/intro-to-16S/metabarcoding-intro.md
         - "Background": omics/intro-to-16S/background.md
         - "Setup": omics/intro-to-16S/setup.md
         - "Quality Control": omics/intro-to-16S/quality-control.md
