--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,4 +87,7 @@ nav:
         - "Merging, Chimeras & Taxonomy": omics/intro-to-16S/merging-chimeras-taxonomy.md
         - "Diversity Analysis": omics/intro-to-16S/diversity-analysis.md
         - "Differential Abundance": omics/intro-to-16S/differential-abundance.md
+    - Intro To 16S Metabarcoding:
+        - "Introduction": omics/intro-metagenomics/metabarcoding-intro.md
+        - "Setup": omics/intro-metagenomics/setup.md
         
