--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,4 +91,5 @@ nav:
     - Intro To Metagenomics:
         - "Introduction": omics/intro-metagenomics/intro.md
         - "Setup": omics/intro-metagenomics/setup.md
+        - "Workshop Notebook": Metagenomics.nb.html
         
