--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,5 +91,5 @@ nav:
     - Intro To Metagenomics:
         - "Introduction": omics/intro-metagenomics/intro.md
         - "Setup": omics/intro-metagenomics/setup.md
-        - "Workshop Notebook": Metagenomics.nb.html
+        - "Workshop Notebook": http://htmlpreview.github.io/?https://github.com/tuftsdatalab/tuftsWorkshops/blob/main/docs/omics/intro-metagenomics/Metagenomics.nb.html
         
