--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,3 +100,9 @@ nav:
             - "AlphaFold2 Output": omics/intro-to-alphafold2/05_af2_output.md
             - "PyMOL Visualization": omics/intro-to-alphafold2/06_pymol_viz.md
             - "Optional: AlphaFold2 Batch Script": omics/intro-to-alphafold2/07_af2_batch.md
+    - RNA-Seq with Galaxy:
+        - "Introduction": 2023_workshops/00_Galaxy_introduction.md
+        - "Processing Raw Reads": 2023_workshops/01_Introduction_and_Setup.md
+        - "Read Alignment": 2023_workshops/03_Read_alignment.md
+        - "Gene Quantification": 2023_workshops/04_Gene_quantification.md
+        - "Differential Expression": 2023_workshops/05_Diff_expression.md
